--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div>
                 <h3 class="state">Idaho, United States</h3>
                 <figure>
-                    <img src="images\idaho-mountains.webp" alt="Idaho Mountains">
+                    <img src="images/idaho-mountains.webp" alt="Idaho Mountains">
                     <figcaption>Idaho Mountains</figcaption>
                 </figure>
                 <p>
