--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Home Page | Diane Lish | WDD 131 - Dynamic Web Fundamentals">
     <meta name="author" content="Diane Lish">
     <link  rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script defer src="scripts/getdates.js"></script>
 </head>
 <body>
