--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://www.w3schools.com/">◾  W3Schools</a>
             <a href="https://codepen.io/">◾  Codepen</a>
             <a href="https://moqups.com/wireframe-tool/?gad_source=1&gclid=Cj0KCQjw9Km3BhDjARIsAGUb4nxi1ahR5-q7rwFXjY-OlAnw0otUISdi5EbJLw4wYYK8jj2g_gm_oDgaAr6GEALw_wcB">◾  Moqups Wireframe</a>
-            <a href="squoosh.app">◾  Squoosh</a>
+            <a href="https://squoosh.app">◾  Squoosh</a>
             <a href="https://htmlreference.io/">◾  HTML Reference</a>
             </div>
         </section>
