fixed alignment issues on home page

--- a/index.html
+++ b/index.html
@@ -45,13 +45,22 @@
         </section>
         <section class="card resources">
             <h2>Web Dev Resources</h2>
-            <div class="links">
-            <a href="https://www.w3schools.com/">◾  W3Schools</a>
-            <a href="https://codepen.io/">◾  Codepen</a>
-            <a href="https://moqups.com/wireframe-tool/?gad_source=1&gclid=Cj0KCQjw9Km3BhDjARIsAGUb4nxi1ahR5-q7rwFXjY-OlAnw0otUISdi5EbJLw4wYYK8jj2g_gm_oDgaAr6GEALw_wcB">◾  Moqups Wireframe</a>
-            <a href="https://squoosh.app">◾  Squoosh</a>
-            <a href="https://htmlreference.io/">◾  HTML Reference</a>
-            </div>
+            <ul class="links">
+                <li>
+                    <a href="https://www.w3schools.com/">W3Schools</a>
+                </li>
+                <li>
+                    <a href="https://codepen.io/">Codepen</a>
+                </li>
+                <li>
+                    <a href="https://moqups.com/wireframe-tool/?gad_source=1&gclid=Cj0KCQjw9Km3BhDjARIsAGUb4nxi1ahR5-q7rwFXjY-OlAnw0otUISdi5EbJLw4wYYK8jj2g_gm_oDgaAr6GEALw_wcB">Moqups Wireframe</a>
+                </li>
+                <li>
+                    <a href="https://squoosh.app">Squoosh</a>
+                <li>
+                    <a href="https://htmlreference.io/">HTML Reference</a>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
