--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <figcaption>Idaho Mountains</figcaption>
                 </figure>
                 <p>
-                    Beautiful mountains and stunning lanscapes are just some of the reasons to love Idaho. The state capitol, Boise, is located in southwest Idaho and is surrounded by 4.7 million acres of forest. With over 100 mountain ranges and more than 3,000 miles of rivers, Idaho has endless adventures for the outdoor enthusiast. If food is the way to your heart, Idaho is famous for its potatos, huckleberries, morel mushrooms, wine, and much more. Whatever your interests Idaho is sure to be able to meet them.
+                    Beautiful mountains and stunning landscapes are just some of the reasons to love Idaho. The state capitol, Boise, is located in southwest Idaho and is surrounded by 4.7 million acres of forest. With over 100 mountain ranges and more than 3,000 miles of rivers, Idaho has endless adventures for the outdoor enthusiast. If food is the way to your heart, Idaho is famous for its potatos, huckleberries, morel mushrooms, wine, and much more. Whatever your interests Idaho is sure to be able to meet them.
                 </p>
             </div>
         </section>
