--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,7 @@
         <a id="menu" href="#"></a>
         <nav>
             <ul class="navigation">
-                <li><a type="home" class="active" href="#">Home</a></li>
+                <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li>
