--- a/place.html
+++ b/place.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Place | WDD 131 | Diane Lish</title> 
-        <meta name="description" content="Place, WDD 131, Diane Lish">
+        <title>Switzerland | WDD 131 | Diane Lish</title> 
+        <meta name="description" content="Switzerland, WDD 131, Diane Lish">
         <meta name="author" content="Diane Lish">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
