added font and fixed title

--- a/form.html
+++ b/form.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form | WDD131 | Diane Lish</title>
-    <meta name="description" content="From, WDD 131, Diane Lish">
+    <title>Product Review Form | WDD131 | Diane Lish</title>
+    <meta name="description" content="Product Review Form, WDD 131, Diane Lish">
     <meta name="author" content="Diane Lish">
     <link href="styles/form.css" rel="stylesheet">
     <script src="scripts/form.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 </head>
 
 <body>  
