--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -30,6 +30,8 @@
 
         <h2>Color Schema</h2>
         <p class="color2">Coral Red #ff3f40 - accent</p>
+        <p class="color6">#e1233c</p>
+        <p class="color7">#Ec4D37</p>
         <p class="color1">California Orange #ff9801 - accent</p>
         <p class="color4">Saloma #ffe187 - accent</p>
         <p class="color3">Papaya Whip #fff1d4 - background</p>
