added lazy loading to more images

--- a/project/action.html
+++ b/project/action.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscribed</title>
+    <meta name="description" content="Action Page">
+    <meta name="author" content="Diane Lish">
 </head>
 <body>
     You have successfully subscribed!
