--- a/project/my-health-journal.html
+++ b/project/my-health-journal.html
@@ -38,7 +38,7 @@
                 <p>Use our My Journal tool to record what you eat. You can track calories, carbs, fat, and protein. My Journal even counts your macros for you.</p>
                 <a href="my-journal.html">Start Tracking!</a>
             </div>
-            <img id="kiwi" src="images/kiwi.svg" alt="kiwi" width="150">
+            <img loading="lazy" id="kiwi" src="images/kiwi.svg" alt="kiwi" width="150">
         </div>
 
         <div class="info tips">
@@ -47,11 +47,11 @@
                 <p>Need some tips to help you with your health journey? Go to our Health Tips page for advice on healthy food options, staying motivated, exercise routines and more!</p>
                 <a href="health-tips.html">Get Health Tips!</a>
             </div>
-            <img id="orange" src="images/orange.svg" alt="orange" width="150">
+            <img loading="lazy" id="orange" src="images/orange.svg" alt="orange" width="150">
         </div>
 
         <form action="action.html">
-            <img id="strawberry" src="images/strawberry.svg" alt="strawberry" width="80">
+            <img loading="lazy" id="strawberry" src="images/strawberry.svg" alt="strawberry" width="80">
             <h2>Subscribe to our newsletter</h2>
             <p>Join for reminders and helpful tips. </p>
 
