--- a/project/my-journal.html
+++ b/project/my-journal.html
@@ -72,9 +72,9 @@
         </div>
 
         <div class="foods">
-            <img src="images/avacado.svg" alt="avacado" width="75">
-            <img src="images/banana.svg" alt="banana" width="75">
-            <img src="images/tomato.svg" alt="tomato" width="75">
+            <img loading="lazy" src="images/avacado.svg" alt="avacado" width="75">
+            <img loading="lazy" src="images/banana.svg" alt="banana" width="75">
+            <img loading="lazy" src="images/tomato.svg" alt="tomato" width="75">
         </div>
 
         <form class="form">
