--- a/project/action.html
+++ b/project/action.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscribed</title>
-    <meta name="description" content="Action Page">
+    <meta name="description" content="My Health Journal">
     <meta name="author" content="Diane Lish">
+    <link rel="stylesheet" href="styles/my-health-journal.css">
+    <script defer src="scripts/my-health-journal.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-    You have successfully subscribed!
+<body id="action-page">
+    <header>
+        <div class="logo">
+            <img src="images/logo1.svg" alt="My Health Journal Logo" width="65">
+            <p><span class="larger">My Health Journal</span><br><span class="smaller">Health Made Easy</span></p>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="my-health-journal.html">Home</a></li>
+                <li><a href="my-journal.html">My Journal</a></li>
+                <li><a href="health-tips.html">Health Tips</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+    <h2>You have successfully subscribed!</h2>
+    </main>
+    <footer>
+        ©<span id="currentYear"></span> 🌷 Diane Lish | United States <br>
+        Last Modified <span id="lastModified"></span>
+    </footer>
 </body>
 </html>
