updated action page and fixed star reviews

--- a/form.html
+++ b/form.html
@@ -17,7 +17,6 @@
     <header>
         <h1>Product Review</h1>
     </header>
-
     <main>
         <form method="get" action="review.html">
             <p>Fields with (<span class="red">*</span>) are required</p>
@@ -28,19 +27,19 @@
             
             <label class="label">Overall Rating<span class="red">*</span></label>
             <div class="stars">
-                <input type="radio" id="fivestar" name="star" required>
+                <input type="radio" id="fivestar" name="star" value="5" required>
                 <label for="fivestar"></label>
 
-                <input type="radio" id="fourstar" name="star" required>
+                <input type="radio" id="fourstar" name="star" value="4" required>
                 <label for="fourstar"></label>
 
-                <input type="radio" id="threestar" name="star" required>
+                <input type="radio" id="threestar" name="star" value="3" required>
                 <label for="threestar"></label>
 
-                <input type="radio" id="twostar" name="star" required>
+                <input type="radio" id="twostar" name="star" value="2" required>
                 <label for="twostar"></label>
 
-                <input type="radio" id="onestar" name="star" required>
+                <input type="radio" id="onestar" name="star" value="1" required>
                 <label for="onestar"></label>
             </div>
 
