--- a/review.html
+++ b/review.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submit Action</title>
-    <script defer src="scripts/form.js"></script>
+    <meta name="description" content="Product Review Form, WDD 131, Diane Lish">
+    <meta name="author" content="Diane Lish">
+    <link href="styles/form.css" rel="stylesheet">
+    <script src="scripts/form.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 </head>
-<body onload="countReviews()">
-    Your review has been submitted! You have reviewed products <span class="reviewsnum"></span> time(s)!
+<body onload="countReviews()" id="action-page">
+    <header>
+        <h1>Product Review</h1>
+    </header>
+    <main>
+    <p>Your review has been submitted. <br>You have reviewed products <span class="reviewsnum"></span> time(s).</p>
+    </main>
+    <footer>
+        ©<span id="currentYear"></span> 🌷 Diane Lish | United States <br>
+        Last Modified <span id="lastModified"></span>
+    </footer>
 </body>
 </html>
