--- a/project/my-journal.html
+++ b/project/my-journal.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Diane Lish">
     <link rel="stylesheet" href="styles/my-health-journal.css">
     <script defer src="scripts/my-health-journal.js"></script>
+    <script defer src="scripts/my-journal.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
