--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Diane Lish</title>
     <meta name="description" content="Home Page | Diane Lish | WDD 131 - Dynamic Web Fundamentals">
     <meta name="author" content="Diane Lish">
-    <link  rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
     <script defer src="scripts/getdates.js"></script>
 </head>
+
 <body>
     <header>
         <h1>WDD 131 - Dynamic Web Fundamentals - Diane Lish</h1>
@@ -23,13 +25,21 @@
         </nav>
     </header>
     <main>
-        
+
         <section class="card">
             <h2>About Me</h2>
             <div>
                 <img src="images/profile.webp" alt="Woman with Dog">
                 <p>
-                    My name is Diane, I'm 34, and I live in Idaho. I am a mom to 4 kids and many animals, including a dog, a cat, a parrot, a frog, and 3 chickens. I strive in the chaos of a house full of life and love. If I have any free time beyond home life and school life, I enjoy spending it outdoors. Since my kids are still young, most of our outdoor time involves exploring and getting messy! I also enjoy anything that involves art, like cake decorating ( I can make some pretty cool-looking cakes), making awesome Halloween costumes, and planning fun parties for the kids. I'm working toward a Bachelor's in Software Development. Who knew that would be something I enjoy doing!? Not me! It has been a fun and rewarding challenge that I love. I'm not entirely sure where this new education adventure will take me but I am excited to see where I go.
+                    My name is Diane, I'm 34, and I live in Idaho. I am a mom to 4 kids and many animals, including a
+                    dog, a cat, a parrot, a frog, and 3 chickens. I strive in the chaos of a house full of life and
+                    love. If I have any free time beyond home life and school life, I enjoy spending it outdoors. Since
+                    my kids are still young, most of our outdoor time involves exploring and getting messy! I also enjoy
+                    anything that involves art, like cake decorating ( I can make some pretty cool-looking cakes),
+                    making awesome Halloween costumes, and planning fun parties for the kids. I'm working toward a
+                    Bachelor's in Software Development. Who knew that would be something I enjoy doing!? Not me! It has
+                    been a fun and rewarding challenge that I love. I'm not entirely sure where this new education
+                    adventure will take me but I am excited to see where I go.
                 </p>
             </div>
             <div>
@@ -39,7 +49,12 @@
                     <figcaption>Idaho Mountains</figcaption>
                 </figure>
                 <p>
-                    Beautiful mountains and stunning landscapes are just some of the reasons to love Idaho. The state capitol, Boise, is located in southwest Idaho and is surrounded by 4.7 million acres of forest. With over 100 mountain ranges and more than 3,000 miles of rivers, Idaho has endless adventures for the outdoor enthusiast. If food is the way to your heart, Idaho is famous for its potatos, huckleberries, morel mushrooms, wine, and much more. Whatever your interests Idaho is sure to be able to meet them.
+                    Beautiful mountains and stunning landscapes are just some of the reasons to love Idaho. The state
+                    capitol, Boise, is located in southwest Idaho and is surrounded by 4.7 million acres of forest. With
+                    over 100 mountain ranges and more than 3,000 miles of rivers, Idaho has endless adventures for the
+                    outdoor enthusiast. If food is the way to your heart, Idaho is famous for its potatos,
+                    huckleberries, morel mushrooms, wine, and much more. Whatever your interests Idaho is sure to be
+                    able to meet them.
                 </p>
             </div>
         </section>
@@ -53,7 +68,9 @@
                     <a href="https://codepen.io/">Codepen</a>
                 </li>
                 <li>
-                    <a href="https://moqups.com/wireframe-tool/?gad_source=1&gclid=Cj0KCQjw9Km3BhDjARIsAGUb4nxi1ahR5-q7rwFXjY-OlAnw0otUISdi5EbJLw4wYYK8jj2g_gm_oDgaAr6GEALw_wcB">Moqups Wireframe</a>
+                    <a
+                        href="https://moqups.com/wireframe-tool/?gad_source=1&gclid=Cj0KCQjw9Km3BhDjARIsAGUb4nxi1ahR5-q7rwFXjY-OlAnw0otUISdi5EbJLw4wYYK8jj2g_gm_oDgaAr6GEALw_wcB">Moqups
+                        Wireframe</a>
                 </li>
                 <li>
                     <a href="https://squoosh.app">Squoosh</a>
@@ -70,4 +87,5 @@
         <p>Last Modified <span id="lastModified"></span> </p>
     </footer>
 </body>
+
 </html>
